--- a/simple_embeds/requirements.txt
+++ b/simple_embeds/requirements.txt
@@ -1,3 +1,6 @@
-version https://git-lfs.github.com/spec/v1
-oid sha256:7ebfb871bf5a38df2ff404b0d099f5edc60150373bd18eae581542c5672fbb52
-size 102
+This module have the following library requirements:
+1. numpy
+2. pandas
+3. tqdm
+4. scipy
+5. wordninja
